tests/incremental_json/incremental_json.exp

Initial status:
Error: test.js:4
  4: var data = require('./data');
                        ^^^^^^^^ ./data. Required module not found


Found 1 error

Create data.json:
No errors!

Modify data.json:
Error: test.js:5
  5: var x: number = data.x;
                     ^^^^^^ string. This type is incompatible with
  5: var x: number = data.x;
            ^^^^^^ number


Found 1 error

Delete data.json:
Error: test.js:4
  4: var data = require('./data');
                        ^^^^^^^^ ./data. Required module not found


Found 1 error

Done!
